<resources>

    <string name="app_name_release">Lyrix</string>
    <string name="app_name_debug">Lyrix Debug</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="shared_pref_homeserver">"in.srev.lyrix.HOMESERVER"</string>
    <string name="shared_pref_token">"in.srev.lyrix.AUTH_TOKEN"</string>
    <string name="shared_pref_broadcast_switch">"in.srev.lyrix.BROADCAST_SWITCH_LAST_USED_ENABLED"</string>
    <string name="shared_pref_scrobble">"in.srev.lyrix.SCROBBLE_ENABLED"</string>
    <string name="login_main_greeting">Welcome back!</string>
    <string name="login_greeting_subtext">Sign in to Lyrix to start scrobbling, sharing your favorite songs with your friends, and get lyrics for the song.</string>
    <string name="register_greeting_main">Welcome to Lyrix!</string>
    <string name="logo_content_description">Lyrix logo</string>
    <string name="register_button__telegramId">Telegram ID</string>
    <string name="ic_contentDescription__youtube">Youtube</string>
    <string name="youtube_music">Youtube Music</string>
    <string name="soundcloud">Soundcloud</string>
    <string name="youtube">Youtube</string>
    <string name="spotify">Spotify</string>
    <string name="loading_track_information">Loading track information...</string>
    <string name="getting_artist_name">Getting artist name...</string>
    <string name="songs_you_may_like">Songs you may like</string>
    <string name="similar_to_your_currently_listening_song">Similar to your currently listening song</string>
    <string name="shared_pref_last_track">in.srev.lyrix.LAST_LISTENED_TRACK_NAME</string>
    <string name="shared_pref_last_artist">in.srev.lyrix.LAST_LISTENED_ARTIST_NAME</string>
    <string name="broadcast">Broadcast</string>
    <string name="broadcast_off">Broadcast Off</string>
    <string name="broadcast_on">Broadcast On</string>
    <string name="scrobbling">Scrobbling</string>
    <string name="scrobble">Scrobble</string>
    <string name="broadcasting">Broadcasting</string>
    <string name="stopping_services">Stopping Services...</string>
    <string name="sleeping">Sleeping</string>
</resources>