<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/registerUsernameTextEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@satoshi@nakamoto.org"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/registerPasswordTextEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerUsernameTextEditView"
        app:layout_constraintStart_toStartOf="@+id/registerUsernameTextEditView"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameTextEditView" />

    <Button
        android:id="@+id/registerLoginButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/registerRegisterButton"
        app:layout_constraintStart_toStartOf="@+id/registerRegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/registerRegisterButton" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordTextEditView"
        app:layout_constraintStart_toStartOf="@+id/registerTelegramIdTextEditView"
        app:layout_constraintTop_toBottomOf="@+id/registerTelegramIdTextEditView" />

    <EditText
        android:id="@+id/registerTelegramIdTextEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_button__telegramId"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordTextEditView"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordTextEditView"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextEditView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_greeting_subtext"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lyrix_foreground" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register_greeting_main"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>